--- a/index.html
+++ b/index.html
@@ -1,36 +1,185 @@
-<html>
+ï»¿<!DOCTYPE html>
+<html lang="en">
 <head>
-  <title>Perms</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>RUSA Permanent Routes</title>
+    <style>
+        * {
+            box-sizing: border-box;
+        }
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif;
+            margin: 0;
+            padding: 16px;
+            background-color: #f5f5f5;
+        }
+        h1 {
+            font-size: 1.5rem;
+            margin-bottom: 16px;
+            color: #333;
+        }
+        .table-container {
+            overflow-x: auto;
+            background: white;
+            border-radius: 8px;
+            box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+        th, td {
+            padding: 12px 16px;
+            text-align: left;
+            border-bottom: 1px solid #e0e0e0;
+        }
+        th {
+            background-color: #2c3e50;
+            color: white;
+            font-weight: 600;
+            position: sticky;
+            top: 0;
+        }
+        tr:nth-child(even) {
+            background-color: #f8f9fa;
+        }
+        tr:nth-child(odd) {
+            background-color: #ffffff;
+        }
+        tr:hover {
+            background-color: #e8f4f8;
+        }
+        a {
+            color: #2980b9;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        @media (max-width: 600px) {
+            body {
+                padding: 8px;
+            }
+            th, td {
+                padding: 10px 12px;
+                font-size: 0.9rem;
+            }
+            h1 {
+                font-size: 1.25rem;
+            }
+        }
+    </style>
 </head>
 <body>
-  <h1>Perms</h1>
-  <table>
-    <tr><th>ID</th><th>Name</th><th>Route</th></tr>
-    <tr><td>4801</td><td><a href="https://rusa.org/rusa/perm/select?pid=4801">A Much Less Adventurous Middle Fork Road</a> (100 - 62.14)</td><td><a href="https://ridewithgps.com/routes/43984685">RWGPS</a></td></tr>
-    <tr><td>4878</td><td><a href="https://rusa.org/rusa/perm/select?pid=4878">Frelard to Issaquah</a> (123 - 76.43)</td><td><a href="https://ridewithgps.com/routes/44863744">RWGPS</a></td></tr>
-    <tr><td>3505</td><td><a href="https://rusa.org/rusa/perm/select?pid=3505">Snoqualmie Valley Trail Gravel Run</a> (102 - 63.38)</td><td><a href="https://ridewithgps.com/routes/33914597">RWGPS</a></td></tr>
-    <tr><td>3227</td><td><a href="https://rusa.org/rusa/perm/select?pid=3227">Postdoc-Peddler 100</a> (102 - 63.38)</td><td><a href="https://ridewithgps.com/routes/33466118">RWGPS</a></td></tr>
-    <tr><td>4715</td><td><a href="https://rusa.org/rusa/perm/select?pid=4715">Three Lake Loop</a> (116 - 72.08)</td><td><a href="https://ridewithgps.com/routes/44010692">RWGPS</a></td></tr>
-    <tr><td>4412</td><td><a href="https://rusa.org/rusa/perm/select?pid=4412">Redmond-Golden Gardens</a> (102 - 63.38)</td><td><a href="https://ridewithgps.com/routes/38912607">RWGPS</a></td></tr>
-    <tr><td>4464</td><td><a href="https://rusa.org/rusa/perm/select?pid=4464">Snoqualmie Valley Mixed Surface Loop</a> (101 - 62.76)</td><td><a href="https://ridewithgps.com/routes/39792725">RWGPS</a></td></tr>
-    <tr><td>3502</td><td><a href="https://rusa.org/rusa/perm/select?pid=3502">520 Two Lake Loop</a> (101 - 62.76)</td><td><a href="https://ridewithgps.com/routes/49174566">RWGPS</a></td></tr>
-    <tr><td>4037</td><td><a href="https://rusa.org/rusa/perm/select?pid=4037">Alki-Auburn Flat Cruise</a> (100 - 62.14)</td><td><a href="https://ridewithgps.com/routes/34997827">RWGPS</a></td></tr>
-    <tr><td>3065</td><td><a href="https://rusa.org/rusa/perm/select?pid=3065">Green Gold and Red</a> (101 - 62.76)</td><td><a href="https://ridewithgps.com/routes/32959547">RWGPS</a></td></tr>
-    <tr><td>3788</td><td><a href="https://rusa.org/rusa/perm/select?pid=3788">Preston Trail Mix</a> (100 - 62.14)</td><td><a href="https://ridewithgps.com/routes/50795834">RWGPS</a></td></tr>
-    <tr><td>758</td><td><a href="https://rusa.org/rusa/perm/select?pid=758">UW - Issaquah</a> (103 - 64)</td><td><a href="https://ridewithgps.com/routes/33321476">RWGPS</a></td></tr>
-    <tr><td>4653</td><td><a href="https://rusa.org/rusa/perm/select?pid=4653">Lake Sammamish Loop from Bryant</a> (103 - 64)</td><td><a href="https://ridewithgps.com/routes/42083103">RWGPS</a></td></tr>
-    <tr><td>1354</td><td><a href="https://rusa.org/rusa/perm/select?pid=1354">Centennial Trail Run</a> (100 - 62.14)</td><td><a href="https://ridewithgps.com/routes/34356072">RWGPS</a></td></tr>
-    <tr><th>ID</th><th>Name</th><th>Route</th></tr>
-    <tr><td>2525</td><td><a href="https://rusa.org/rusa/perm/select?pid=2525">The Commons-Renton-Maple Valley</a> (100 - 62.14)</td><td><a href="https://ridewithgps.com/routes/34858942">RWGPS</a></td></tr>
-    <tr><td>2173</td><td><a href="https://rusa.org/rusa/perm/select?pid=2173">Three Bumps-Woodinville</a> (101 - 62.76)</td><td><a href="https://ridewithgps.com/routes/33680078">RWGPS</a></td></tr>
-    <tr><td>3499</td><td><a href="https://rusa.org/rusa/perm/select?pid=3499">SOB - Snohomish Edison Out & Back</a> (203 - 126.14)</td><td><a href="https://ridewithgps.com/routes/33815633">RWGPS</a></td></tr>
-    <tr><td>3056</td><td><a href="https://rusa.org/rusa/perm/select?pid=3056">Olympia Chehalis Western & Yelm Tenino Trails</a> (103 - 64)</td><td><a href="https://ridewithgps.com/routes/33989721">RWGPS</a></td></tr>
-    <tr><td>1489</td><td><a href="https://rusa.org/rusa/perm/select?pid=1489">Snohomish - Mt. Vernon</a> (141 - 87.61)</td><td><a href="https://ridewithgps.com/routes/35004976">RWGPS</a></td></tr>
-    <tr><td>3738</td><td><a href="https://rusa.org/rusa/perm/select?pid=3738">SOL - Snohomish - La Conner Out n Back</a> (158 - 98.18)</td><td><a href="https://ridewithgps.com/routes/35004946">RWGPS</a></td></tr>
-    <tr><td>2249</td><td><a href="https://rusa.org/rusa/perm/select?pid=2249">Rome to Blaine and Back</a> (100 - 62.14)</td><td><a href="https://ridewithgps.com/routes/35575195">RWGPS</a></td></tr>
-    <tr><td>4106</td><td><a href="https://rusa.org/rusa/perm/select?pid=4106">Tulip Tangle</a> (201 - 124.9)</td><td><a href="https://ridewithgps.com/routes/35624420">RWGPS</a></td></tr>
-    <tr><td>5281</td><td><a href="https://rusa.org/rusa/perm/select?pid=5281">Happy Trails 200k</a> (201 - 124.9)</td><td><a href="https://ridewithgps.com/routes/51863617">RWGPS</a></td></tr>
-    <tr><td>5300</td><td><a href="https://rusa.org/rusa/perm/select?pid=5300">Issaquah – Lake Sammamish – Mercer Island – May Valley Loops</a> (100 - 62.14)</td><td><a href="https://ridewithgps.com/routes/49026233">RWGPS</a></td></tr>
-  </table>
+    <h1>RUSA Permanent Routes</h1>
+    <div class="table-container">
+        <table>
+            <thead>
+                <tr>
+                    <th>Route ID</th>
+                    <th>Name</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><a href="https://rusa.org/rusa/perm/select?pid=4801" target="_blank" rel="noopener">4801</a></td>
+                    <td><a href="https://ridewithgps.com/routes/43984685" target="_blank" rel="noopener">A Much Less Adventurous Middle Fork Road</a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://rusa.org/rusa/perm/select?pid=4878" target="_blank" rel="noopener">4878</a></td>
+                    <td><a href="https://ridewithgps.com/routes/44863744" target="_blank" rel="noopener">Frelard to Issaquah</a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://rusa.org/rusa/perm/select?pid=3505" target="_blank" rel="noopener">3505</a></td>
+                    <td><a href="https://ridewithgps.com/routes/33914597" target="_blank" rel="noopener">Snoqualmie Valley Trail Gravel Run</a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://rusa.org/rusa/perm/select?pid=3227" target="_blank" rel="noopener">3227</a></td>
+                    <td><a href="https://ridewithgps.com/routes/33466118" target="_blank" rel="noopener">Postdoc-Peddler 100</a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://rusa.org/rusa/perm/select?pid=3502" target="_blank" rel="noopener">3502</a></td>
+                    <td><a href="https://ridewithgps.com/routes/49174566" target="_blank" rel="noopener">520 Two Lake Loop</a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://rusa.org/rusa/perm/select?pid=4715" target="_blank" rel="noopener">4715</a></td>
+                    <td><a href="https://ridewithgps.com/routes/44010692" target="_blank" rel="noopener">Three Lake Loop</a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://rusa.org/rusa/perm/select?pid=4412" target="_blank" rel="noopener">4412</a></td>
+                    <td><a href="https://ridewithgps.com/routes/38912607" target="_blank" rel="noopener">Redmond-Golden Gardens</a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://rusa.org/rusa/perm/select?pid=4037" target="_blank" rel="noopener">4037</a></td>
+                    <td><a href="https://ridewithgps.com/routes/34997827" target="_blank" rel="noopener">Alki-Auburn Flat Cruise</a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://rusa.org/rusa/perm/select?pid=4653" target="_blank" rel="noopener">4653</a></td>
+                    <td><a href="https://ridewithgps.com/routes/42083103" target="_blank" rel="noopener">Lake Sammamish Loop from Bryant</a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://rusa.org/rusa/perm/select?pid=1354" target="_blank" rel="noopener">1354</a></td>
+                    <td><a href="https://ridewithgps.com/routes/34356072" target="_blank" rel="noopener">Centennial Trail Run</a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://rusa.org/rusa/perm/select?pid=4464" target="_blank" rel="noopener">4464</a></td>
+                    <td><a href="https://ridewithgps.com/routes/39792725" target="_blank" rel="noopener">Snoqualmie Valley Mixed Surface Loop</a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://rusa.org/rusa/perm/select?pid=3788" target="_blank" rel="noopener">3788</a></td>
+                    <td><a href="https://ridewithgps.com/routes/50795834" target="_blank" rel="noopener">Preston Trail Mix</a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://rusa.org/rusa/perm/select?pid=758" target="_blank" rel="noopener">758</a></td>
+                    <td><a href="https://ridewithgps.com/routes/33321476" target="_blank" rel="noopener">UW - Issaquah</a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://rusa.org/rusa/perm/select?pid=3065" target="_blank" rel="noopener">3065</a></td>
+                    <td><a href="https://ridewithgps.com/routes/32959547" target="_blank" rel="noopener">Green Gold and Red</a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://rusa.org/rusa/perm/select?pid=2525" target="_blank" rel="noopener">2525</a></td>
+                    <td><a href="https://ridewithgps.com/routes/34858942" target="_blank" rel="noopener">The Commons-Renton-Maple Valley</a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://rusa.org/rusa/perm/select?pid=2173" target="_blank" rel="noopener">2173</a></td>
+                    <td><a href="https://ridewithgps.com/routes/33680078" target="_blank" rel="noopener">Three Bumps-Woodinville</a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://rusa.org/rusa/perm/select?pid=3499" target="_blank" rel="noopener">3499</a></td>
+                    <td><a href="https://ridewithgps.com/routes/33815633" target="_blank" rel="noopener">SOB - Snohomish Edison Out &amp; Back</a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://rusa.org/rusa/perm/select?pid=3056" target="_blank" rel="noopener">3056</a></td>
+                    <td><a href="https://ridewithgps.com/routes/33989721" target="_blank" rel="noopener">Olympia Chehalis Western &amp; Yelm Tenino Trails</a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://rusa.org/rusa/perm/select?pid=1489" target="_blank" rel="noopener">1489</a></td>
+                    <td><a href="https://ridewithgps.com/routes/35004976" target="_blank" rel="noopener">Snohomish - Mt. Vernon</a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://rusa.org/rusa/perm/select?pid=3738" target="_blank" rel="noopener">3738</a></td>
+                    <td><a href="https://ridewithgps.com/routes/35004946" target="_blank" rel="noopener">SOL - Snohomish - La Conner Out n Back</a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://rusa.org/rusa/perm/select?pid=2249" target="_blank" rel="noopener">2249</a></td>
+                    <td><a href="https://ridewithgps.com/routes/35575195" target="_blank" rel="noopener">Rome to Blaine and Back</a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://rusa.org/rusa/perm/select?pid=4106" target="_blank" rel="noopener">4106</a></td>
+                    <td><a href="https://ridewithgps.com/routes/35624420" target="_blank" rel="noopener">Tulip Tangle</a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://rusa.org/rusa/perm/select?pid=5281" target="_blank" rel="noopener">5281</a></td>
+                    <td><a href="https://ridewithgps.com/routes/51863617" target="_blank" rel="noopener">Happy Trails 200k</a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://rusa.org/rusa/perm/select?pid=5300" target="_blank" rel="noopener">5300</a></td>
+                    <td><a href="https://ridewithgps.com/routes/49026233" target="_blank" rel="noopener">Issaquah â€“ Lake Sammamish â€“ Mercer Island â€“ May Valley Loops</a></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
